# aoe2killcoach4-clean

./: .gitignore  README.md  pyproject.toml
src/aoe2killcoach4/: __init__.py  cli.py  core.py  data_mappings.py  time_utils.py
src/aoe2killcoach4.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
